--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="/assets/css/style.css" />
     <!-- Keep this if style.css is yours -->
 
-    <title>1staccess</title>
+    <title>1staccess Home Care</title>
   </head>
   <body class="dashboard">
     <div id="preloader">
