Added questions feature

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <title>Learning Management System - 1staccess Home Care</title>
   </head>
   <body class="dashboard">
-    <div id="preloader">
+    <!-- <div id="preloader">
       <i>.</i>
       <i>.</i>
       <i>.</i>
-    </div>
+    </div> -->
     <div id="main-wrapper">
       <div id="root"></div>
     </div>
