--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="assets/images/main_logo.png"
+      href="assets/images/favicon.png"
     />
 
     <!-- CDN Styles -->
